[package]
name = "thirst-responder"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
prometheus = "0.13"
serialport = "4.0"

[build-dependencies]
cross = "0.2.5"


[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "my-custom-aarch64-udev"

